[gd_scene load_steps=2 format=2]

[ext_resource path="res://ammunition/Canonball.gd" type="Script" id=1]

[node name="Canonball" type="Area2D"]
collision_mask = 4
script = ExtResource( 1 )
speed = 1

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="LifeSpan" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Canonball_body_entered"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_LifeSpan_timeout"]
